@@ -37,6 +37,7 @@ Description
 
 #include "fvCFD.H"
 #include "incompressiblePhase.H"
+#include "porousMediumModel.H"
 #include "capillarityModel.H"
 #include "relativePermeabilityModel.H"
 #include "multiscalarMixture.H"
